now config have more options

--- a/js/config.json
+++ b/js/config.json
@@ -1,38 +1,81 @@
 {
-  "map" : [
-    "############################################################",
-    "#..........................................................#",
-    "#.............W..............................W.............#",
-    "#.......XXXXXXXXXXXXXX................XXXXXXXXXXXXXX.......#",
-    "#...0....................0........0....................0...#",
-    "#..XXXXXX............XXXXXXX....XXXXXXX............XXXXXX..#",
-    "#..........................................................#",
-    "#.......0............0................0............0.......#",
-    "#.....XXXXXX......XXXXXX............XXXXXX......XXXXXX.....#",
-    "#..........................................................#",
-    "#0..........................0..0..........................0#",
-    "#XXX..........W...........XXX..XXX..........W...........XXX#",
-    "#............XXXX..........................XXXX............#",
-    "#0..........................0..0..........................0#",
-    "#..........................................................#",
-    "#..........................................................#",
-    "#..........................................................#",
-    "#.............W..............................W.............#",
-    "#.......XXXXXXXXXXXXXX................XXXXXXXXXXXXXX.......#",
-    "#...0....................0........0....................0...#",
-    "#..XXXXXX............XXXXXXX....XXXXXXX............XXXXXX..#",
-    "#..........................................................#",
-    "#.......0............0................0............0.......#",
-    "#.....XXXXXX......XXXXXX............XXXXXX......XXXXXX.....#",
-    "#..........................................................#",
-    "#0..........................0..0..........................0#",
-    "#XXX..........W...........XXX..XXX..........W...........XXX#",
-    "#............XXXX..........................XXXX............#",
-    "#0..........................0..0..........................0#",
-    "############################################################"
-],
-  "weaponSpawnSpeed" : 2000,
-  "playerSpeed" : 200,
-  "bulletSpeed" : 500,
-  "music" : "./sound/sound.mp3"
+    "map": [
+        "############################################################",
+        "#..........................................................#",
+        "#.............W..............................W.............#",
+        "#.......XXXXXXXXXXXXXX................XXXXXXXXXXXXXX.......#",
+        "#...0....................0........0....................0...#",
+        "#..XXXXXX............XXXXXXX....XXXXXXX............XXXXXX..#",
+        "#..........................................................#",
+        "#.......0............0................0............0.......#",
+        "#.....XXXXXX......XXXXXX............XXXXXX......XXXXXX.....#",
+        "#..........................................................#",
+        "#0..........................0..0..........................0#",
+        "#XXX..........W...........XXX..XXX..........W...........XXX#",
+        "#............XXXX..........................XXXX............#",
+        "#0..........................0..0..........................0#",
+        "#..........................................................#",
+        "#..........................................................#",
+        "#..........................................................#",
+        "#.............W..............................W.............#",
+        "#.......XXXXXXXXXXXXXX................XXXXXXXXXXXXXX.......#",
+        "#...0....................0........0....................0...#",
+        "#..XXXXXX............XXXXXXX....XXXXXXX............XXXXXX..#",
+        "#..........................................................#",
+        "#.......0............0................0............0.......#",
+        "#.....XXXXXX......XXXXXX............XXXXXX......XXXXXX.....#",
+        "#..........................................................#",
+        "#0..........................0..0..........................0#",
+        "#XXX..........W...........XXX..XXX..........W...........XXX#",
+        "#............XXXX..........................XXXX............#",
+        "#0..........................0..0..........................0#",
+        "############################################################"
+    ],
+    "weaponSpawnSpeed": 2000,
+    "playerSpeed": 200,
+    "bulletSpeed": 500,
+    "music": "./sound/sound.mp3",
+    "defaultWeapon": {
+        "name": "pistol",
+        "damage": 10,
+        "speed": 300,
+        "bulletCost": 0,
+        "move": [
+            [1, 0]
+        ],
+        "sprite": { "file": "img/weapons.png", "pos": [0, 0], "size": [33, 15] }
+    },
+    "weaponPack": [{
+        "name": "ak47",
+        "damage": 5,
+        "speed": 100,
+        "bulletCost": 3,
+        "move": [
+            [1, 0]
+        ],
+        "sprite": { "file": "img/weapons.png", "pos": [35, 0], "size": [33, 15] }
+    }, {
+        "name": "shotgun",
+        "damage": 10,
+        "speed": 400,
+        "bulletCost": 10,
+        "move": [
+            [0.8, 0.2],
+            [0.9, 0.1],
+            [1, 0],
+            [0.9, -0.1],
+            [0.8, -0.2]
+        ],
+        "sprite": { "file": "img/weapons.png", "pos": [70, 70], "size": [33, 15] }
+    }, {
+        "name": "rpg",
+        "damage": 50,
+        "speed": 600,
+        "bulletCost": 12,
+        "move": [
+            [1, 0]
+        ],
+        "sprite": { "file": "img/weapons.png", "pos": [152, 21], "size": [51, 17] }
+    }],
+    "terra": { "block": { "file": "img/spritesheetmini.jpg", "pos": [40, 0], "size": [20, 20] }, "ground": { "file": "img/spritesheetmini.jpg", "pos": [0, 0], "size": [20, 20] } }
 }
